test_dev/qasm/syntax_errors/e55.qasm
opaque magic2(x q;
opaque magic b;
